[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/loading_screen.png" type="Texture" id=1]
[ext_resource path="res://sprites/button_begin.png" type="Texture" id=2]
[ext_resource path="res://sprites/button_begin_press.png" type="Texture" id=3]
[ext_resource path="res://scenes/loading_screen.gd" type="Script" id=4]
[ext_resource path="res://sprites/loading_screen_jingle.wav" type="AudioStream" id=5]
[ext_resource path="res://button_press_sound.tscn" type="PackedScene" id=6]

[node name="loading_screen" type="Node2D"]
script = ExtResource( 4 )

[node name="loading_bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="begin_button" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 500.0
margin_right = 258.0
margin_bottom = 566.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="button_press_sound" parent="." instance=ExtResource( 6 )]
[connection signal="mouse_entered" from="begin_button" to="." method="_on_begin_button_mouse_entered"]
[connection signal="pressed" from="begin_button" to="." method="_on_begin_button_pressed"]
